@@ -6,6 +6,8 @@ trunk
 * bugfix for R version 2.11.0 is detecting as.symbol("") character as missing function parameter
 * mxFactor() function accepts data.frame objects
 * added mxCI() function to calculate likelihood-based confidence intervals
+* mxCompare() shows model information for base models
+* added flag all=[TRUE|FALSE] to mxCompare() function
 
 Release 0.3.0-1217 (Apr 20, 2010)
 =================================
